SFDC/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <inlineHelpText>Select Age from the given Range</inlineHelpText>
        <label>Age</label>
        <picklist>
            <picklistValues>
                <fullName>18-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <picklist>
            <picklistValues>
                <fullName>50 Lacs to 1 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Crore to  5 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Crores to 10 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Crores to 20 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 20 Crores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cars_Owned__c</fullName>
        <label>Cars Owned</label>
        <picklist>
            <picklistValues>
                <fullName>Mercedes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porsche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolls Royce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <inlineHelpText>Enter the Date &amp; Time</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Attended_By__c</fullName>
        <label>Lead Attended By</label>
        <picklist>
            <picklistValues>
                <fullName>Aparna Chudasama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arundhati De</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharien Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divya Rai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurlene Mehta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaspreet Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Walia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nirav Modi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reshma Verma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruchika Khullar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanya Mallavarapu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vrunda Nagpal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Influencer__c</fullName>
        <label>Lead Influenced By</label>
        <picklist>
            <picklistValues>
                <fullName>Magazine Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Articles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_infl_detail__c</fullName>
        <label>Lead Influencer Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NMJ_Events__c</fullName>
        <inlineHelpText>Select NMJ Event</inlineHelpText>
        <label>NMJ Events</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Networth__c</fullName>
        <label>Networth</label>
        <picklist>
            <picklistValues>
                <fullName>50 Crores to 100 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Crores to 200 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 Crores to 300 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 Crores to 400 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400 Crores to 500 Crores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 500 Crores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Cars_Owned__c</fullName>
        <label>Other Cars Owned</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Networth__c</fullName>
        <description>Please enter the property networth</description>
        <inlineHelpText>Enter the networth property</inlineHelpText>
        <label>Property Networth</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>NMJ_validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND( ISPICKVAL(  LeadSource , &quot;NMJ Events&quot;) , ISBLANK(  NMJ_Events__c )),AND( ISPICKVAL(  LeadSource , &quot;Phone Calls&quot;), NMJ_Events__c&lt;&gt;&quot;&quot;),AND( ISPICKVAL(  LeadSource , &quot;Emails&quot;), NMJ_Events__c&lt;&gt;&quot;&quot;))</errorConditionFormula>
        <errorMessage>NMJ Events Error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_the_Other_Cars_Own</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Includes( Cars_Owned__c , &quot;Others&quot;),ISBLANK( Other_Cars_Owned__c ))</errorConditionFormula>
        <errorDisplayField>Other_Cars_Owned__c</errorDisplayField>
        <errorMessage>Please enter Data for &apos;Other Cars Own&apos; field  if  Car Owned is &apos;Others&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_the_Other_Lead_Source</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsPickVal( LeadSource , &quot;Other&quot;),ISBLANK(  Lead_infl_detail__c  ))</errorConditionFormula>
        <errorDisplayField>Lead_infl_detail__c</errorDisplayField>
        <errorMessage>Please enter Data for &apos;Other Lead Source&apos; field  if  Lead Source is &apos;Other&apos;.</errorMessage>
    </validationRules>
</CustomObject>